Closed Bug 1811216 Opened 1 year ago Closed 1 year ago

Intermittent Assertion failure: mResolver, at /builds/worker/checkouts/gecko/dom/ipc/JSValidatorChild.cpp:20

Categories

(Core :: DOM: Content Processes, defect, P5)

defect

Tracking

()

RESOLVED FIXED
111 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox109 --- unaffected
firefox110 --- wontfix
firefox111 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: sefeng)

References

Details

(Keywords: assertion, intermittent-failure)

Attachments

(1 file)

Filed by: smolnar [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=402850303&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/SOBkmdkTQOWe_yyXXh6RZg/runs/0/artifacts/public/logs/live_backing.log


INFO - GECKO(1561) | [Parent 1561, Compositor] WARNING: IPC Connection Error: [Parent][PCompositorManagerParent] RunMessage(msgname=PCompositorBridge::Msg___delete__) Channel closing: too late to send/recv, messages will be lost: file /builds/worker/checkouts/gecko/ipc/glue/MessageChannel.cpp:1927
[task 2023-01-19T10:56:07.220Z] 10:56:07     INFO - GECKO(1561) | [Child 10432: Main Thread]: I/DocShellAndDOMWindowLeak --DOCSHELL 7f973e92fc00 == 0 [pid = 10432] [id = 0] [url = about:blank]
[task 2023-01-19T10:56:07.223Z] 10:56:07     INFO - GECKO(1561) | [Child 10413: Main Thread]: I/DocShellAndDOMWindowLeak --DOCSHELL 7f7f2802fc00 == 0 [pid = 10413] [id = 0] [url = http://example.com/]
[task 2023-01-19T10:56:07.225Z] 10:56:07     INFO - GECKO(1561) | [Child 10511, Main Thread] WARNING: NS_ENSURE_TRUE(Preferences::InitStaticMembers()) failed: file /builds/worker/checkouts/gecko/modules/libpref/Preferences.cpp:4663
[task 2023-01-19T10:56:07.228Z] 10:56:07     INFO - GECKO(1561) | [Child 10485: Main Thread]: I/DocShellAndDOMWindowLeak --DOCSHELL 7f666ad23000 == 0 [pid = 10485] [id = 0] [url = about:blank]
[task 2023-01-19T10:56:07.252Z] 10:56:07     INFO - GECKO(1561) | [Child 10387, Main Thread] WARNING: IPC message 'PContent::Msg_CleanupPendingLoadState' discarded: actor cannot send: file /builds/worker/checkouts/gecko/ipc/glue/ProtocolUtils.cpp:504
[task 2023-01-19T10:56:07.262Z] 10:56:07     INFO - GECKO(1561) | [Child 1672, Main Thread] WARNING: '!CanSend() || !mManager || !mManager->CanSend()', file /builds/worker/checkouts/gecko/dom/ipc/jsactor/JSWindowActorChild.cpp:44
[task 2023-01-19T10:56:07.290Z] 10:56:07     INFO - GECKO(1561) | [Child 10485: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 2 (7f666ad21800) [pid = 10485] [serial = 3] [outer = 0] [url = about:blank]
[task 2023-01-19T10:56:07.292Z] 10:56:07     INFO - GECKO(1561) | [Child 10485: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 1 (7f66700e3470) [pid = 10485] [serial = 1] [outer = 0] [url = about:blank]
[task 2023-01-19T10:56:07.298Z] 10:56:07     INFO - GECKO(1561) | [Child 10485: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 0 (7f666ad24000) [pid = 10485] [serial = 2] [outer = 0] [url = about:blank]
[task 2023-01-19T10:56:07.300Z] 10:56:07     INFO - GECKO(1561) | [Child 10485, Main Thread] WARNING: Extra shutdown CC: 'i < NORMAL_SHUTDOWN_COLLECTIONS', file /builds/worker/checkouts/gecko/xpcom/base/nsCycleCollector.cpp:3384
[task 2023-01-19T10:56:07.306Z] 10:56:07     INFO - GECKO(1561) | [Child 10485, Main Thread] WARNING: NS_ENSURE_TRUE(InitStaticMembers()) failed: file /builds/worker/workspace/obj-build/dist/include/mozilla/Preferences.h:129
[task 2023-01-19T10:56:07.311Z] 10:56:07     INFO - GECKO(1561) | [Child 10387: Main Thread]: I/DocShellAndDOMWindowLeak --DOCSHELL 7fc952d2f000 == 1 [pid = 10387] [id = 0] [url = http://example.com/]
[task 2023-01-19T10:56:07.313Z] 10:56:07     INFO - GECKO(1561) | [Child 10387: Main Thread]: I/DocShellAndDOMWindowLeak --DOCSHELL 7fc952d3a400 == 0 [pid = 10387] [id = 1] [url = about:blank]
[task 2023-01-19T10:56:07.329Z] 10:56:07     INFO - GECKO(1561) | [Child 10485, Main Thread] WARNING: NS_ENSURE_TRUE(Preferences::InitStaticMembers()) failed: file /builds/worker/checkouts/gecko/modules/libpref/Preferences.cpp:4663
[task 2023-01-19T10:56:07.334Z] 10:56:07     INFO - GECKO(1561) | [Child 10432: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 2 (7f973e932400) [pid = 10432] [serial = 3] [outer = 0] [url = about:blank]
[task 2023-01-19T10:56:07.340Z] 10:56:07     INFO - GECKO(1561) | [Child 10432: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 1 (7f9743db4470) [pid = 10432] [serial = 1] [outer = 0] [url = about:blank]
[task 2023-01-19T10:56:07.342Z] 10:56:07     INFO - GECKO(1561) | [Child 10432: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 0 (7f973e930400) [pid = 10432] [serial = 2] [outer = 0] [url = about:blank]
[task 2023-01-19T10:56:07.344Z] 10:56:07     INFO - GECKO(1561) | [Child 10432, Main Thread] WARNING: Extra shutdown CC: 'i < NORMAL_SHUTDOWN_COLLECTIONS', file /builds/worker/checkouts/gecko/xpcom/base/nsCycleCollector.cpp:3384
[task 2023-01-19T10:56:07.351Z] 10:56:07     INFO - GECKO(1561) | [Child 10432, Main Thread] WARNING: NS_ENSURE_TRUE(InitStaticMembers()) failed: file /builds/worker/workspace/obj-build/dist/include/mozilla/Preferences.h:129
[task 2023-01-19T10:56:07.367Z] 10:56:07     INFO - GECKO(1561) | [Child 10432, Main Thread] WARNING: NS_ENSURE_TRUE(Preferences::InitStaticMembers()) failed: file /builds/worker/checkouts/gecko/modules/libpref/Preferences.cpp:4663
[task 2023-01-19T10:56:07.380Z] 10:56:07     INFO - GECKO(1561) | [Child 10413: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 3 (7f7f2d4b3470) [pid = 10413] [serial = 1] [outer = 0] [url = http://example.com/]
[task 2023-01-19T10:56:07.385Z] 10:56:07     INFO - GECKO(1561) | [Child 10413: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 2 (7f7f28031c00) [pid = 10413] [serial = 3] [outer = 0] [url = about:blank]
[task 2023-01-19T10:56:07.386Z] 10:56:07     INFO - GECKO(1561) | [Child 10413: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 1 (7f7f28033000) [pid = 10413] [serial = 4] [outer = 0] [url = http://example.com/]
[task 2023-01-19T10:56:07.387Z] 10:56:07     INFO - GECKO(1561) | [Child 10413: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 0 (7f7f28030400) [pid = 10413] [serial = 2] [outer = 0] [url = about:blank]
[task 2023-01-19T10:56:07.390Z] 10:56:07     INFO - GECKO(1561) | [Child 10413, Main Thread] WARNING: Extra shutdown CC: 'i < NORMAL_SHUTDOWN_COLLECTIONS', file /builds/worker/checkouts/gecko/xpcom/base/nsCycleCollector.cpp:3384
[task 2023-01-19T10:56:07.395Z] 10:56:07     INFO - GECKO(1561) | [Child 10413, Main Thread] WARNING: NS_ENSURE_TRUE(InitStaticMembers()) failed: file /builds/worker/workspace/obj-build/dist/include/mozilla/Preferences.h:129
[task 2023-01-19T10:56:07.402Z] 10:56:07     INFO - GECKO(1561) | [Child 10387: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 5 (7fc952d3a800) [pid = 10387] [serial = 6] [outer = 0] [url = about:blank]
[task 2023-01-19T10:56:07.403Z] 10:56:07     INFO - GECKO(1561) | [Child 10387: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 4 (7fc952d31400) [pid = 10387] [serial = 3] [outer = 0] [url = about:blank]
[task 2023-01-19T10:56:07.405Z] 10:56:07     INFO - GECKO(1561) | [Child 10387: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 3 (7fc9581db470) [pid = 10387] [serial = 1] [outer = 0] [url = http://example.com/]
[task 2023-01-19T10:56:07.406Z] 10:56:07     INFO - GECKO(1561) | [Child 10387: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 2 (7fc952d2f800) [pid = 10387] [serial = 2] [outer = 0] [url = about:blank]
[task 2023-01-19T10:56:07.407Z] 10:56:07     INFO - GECKO(1561) | [Child 10387: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 1 (7fc9581dd750) [pid = 10387] [serial = 5] [outer = 0] [url = about:blank]
[task 2023-01-19T10:56:07.410Z] 10:56:07     INFO - GECKO(1561) | [Child 10387: Main Thread]: I/DocShellAndDOMWindowLeak --DOMWINDOW == 0 (7fc952d32400) [pid = 10387] [serial = 4] [outer = 0] [url = http://example.com/]
[task 2023-01-19T10:56:07.414Z] 10:56:07     INFO - GECKO(1561) | [Child 10387, Main Thread] WARNING: Extra shutdown CC: 'i < NORMAL_SHUTDOWN_COLLECTIONS', file /builds/worker/checkouts/gecko/xpcom/base/nsCycleCollector.cpp:3384
[task 2023-01-19T10:56:07.421Z] 10:56:07     INFO - GECKO(1561) | Assertion failure: mResolver, at /builds/worker/checkouts/gecko/dom/ipc/JSValidatorChild.cpp:20
[task 2023-01-19T10:56:07.430Z] 10:56:07     INFO -  Initializing stack-fixing for the first stack frame, this may take a while...
[task 2023-01-19T10:56:33.257Z] 10:56:33     INFO - GECKO(1561) | #01: mozilla::dom::JSValidatorChild::RecvOnDataAvailable(mozilla::ipc::Shmem&&) [dom/ipc/JSValidatorChild.cpp:20]
INFO - GECKO(1561) | #02: mozilla::dom::PJSValidatorChild::OnMessageReceived(IPC::Message const&) [s3:gecko-generated-sources:46b227f3062d50bf38b90782c398adee0ad08521c9d3c9d3b0fa6a27293069e5ffc4c93aff39549f5261e01d5805cf7f5d4fc33921ad0fa435c7c571d6a13ec9/ipc/ipdl/PJSValidatorChild.cpp::0]
[task 2023-01-19T10:56:33.259Z] 10:56:33     INFO - GECKO(1561) | #03: mozilla::dom::PJSOracleChild::OnMessageReceived(IPC::Message const&) [s3:gecko-generated-sources:5a70f66ef89beb5d550a184e4ea3f6f87b42c70f746541659e3fac160cb16cfdae277f96a8f287831de4ed93aca1b703f1f87077179d98376db8853be7d77c23/ipc/ipdl/PJSOracleChild.cpp::150]
[task 2023-01-19T10:56:33.260Z] 10:56:33     INFO - GECKO(1561) | #04: mozilla::ipc::MessageChannel::DispatchAsyncMessage(mozilla::ipc::ActorLifecycleProxy*, IPC::Message const&) [ipc/glue/MessageChannel.cpp:1800]
[task 2023-01-19T10:56:33.262Z] 10:56:33     INFO - GECKO(1561) | #05: mozilla::ipc::MessageChannel::DispatchMessage(mozilla::ipc::ActorLifecycleProxy*, mozilla::UniquePtr<IPC::Message, mozilla::DefaultDelete<IPC::Message> >) [ipc/glue/MessageChannel.cpp:1728]
[task 2023-01-19T10:56:33.263Z] 10:56:33     INFO - GECKO(1561) | #06: mozilla::ipc::MessageChannel::RunMessage(mozilla::ipc::ActorLifecycleProxy*, mozilla::ipc::MessageChannel::MessageTask&) [ipc/glue/MessageChannel.cpp:1525]
[task 2023-01-19T10:56:33.265Z] 10:56:33     INFO - GECKO(1561) | #07: mozilla::ipc::MessageChannel::MessageTask::Run() [ipc/glue/MessageChannel.cpp:1632]
[task 2023-01-19T10:56:33.265Z] 10:56:33     INFO - GECKO(1561) | #08: mozilla::RunnableTask::Run() [xpcom/threads/TaskController.cpp:540]
[task 2023-01-19T10:56:33.265Z] 10:56:33     INFO - GECKO(1561) | #09: mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) [xpcom/threads/TaskController.cpp:852]
[task 2023-01-19T10:56:33.265Z] 10:56:33     INFO - GECKO(1561) | #10: mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) [xpcom/threads/TaskController.cpp:0]
[task 2023-01-19T10:56:33.266Z] 10:56:33     INFO - GECKO(1561) | #11: mozilla::TaskController::ProcessPendingMTTask(bool) [xpcom/threads/TaskController.cpp:462]
[task 2023-01-19T10:56:33.269Z] 10:56:33     INFO - GECKO(1561) | #12: mozilla::detail::RunnableFunction<mozilla::TaskController::InitializeInternal()::$_3>::Run() [xpcom/threads/nsThreadUtils.h:547]
[task 2023-01-19T10:56:33.269Z] 10:56:33     INFO - GECKO(1561) | #13: nsThread::ProcessNextEvent(bool, bool*) [xpcom/threads/nsThread.cpp:1201]
[task 2023-01-19T10:56:33.270Z] 10:56:33     INFO - GECKO(1561) | #14: NS_ProcessNextEvent(nsIThread*, bool) [xpcom/threads/nsThreadUtils.cpp:477]
[task 2023-01-19T10:56:33.271Z] 10:56:33     INFO - GECKO(1561) | #15: mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) [ipc/glue/MessagePump.cpp:0]
[task 2023-01-19T10:56:33.271Z] 10:56:33     INFO - GECKO(1561) | #16: MessageLoop::RunInternal() [ipc/chromium/src/base/message_loop.cc:0]
[task 2023-01-19T10:56:33.272Z] 10:56:33     INFO - GECKO(1561) | #17: MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:357]
[task 2023-01-19T10:56:33.272Z] 10:56:33     INFO - GECKO(1561) | #18: nsBaseAppShell::Run() [widget/nsBaseAppShell.cpp:150]
[task 2023-01-19T10:56:33.273Z] 10:56:33     INFO - GECKO(1561) | #19: XRE_RunAppShell() [toolkit/xre/nsEmbedFunctions.cpp:742]
[task 2023-01-19T10:56:33.274Z] 10:56:33     INFO - GECKO(1561) | #20: mozilla::ipc::MessagePumpForChildProcess::Run(base::MessagePump::Delegate*) [ipc/glue/MessagePump.cpp:235]
[task 2023-01-19T10:56:33.274Z] 10:56:33     INFO - GECKO(1561) | #21: MessageLoop::RunInternal() [ipc/chromium/src/base/message_loop.cc:0]
[task 2023-01-19T10:56:33.274Z] 10:56:33     INFO - GECKO(1561) | #22: MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:357]
[task 2023-01-19T10:56:33.274Z] 10:56:33     INFO - GECKO(1561) | #23: XRE_InitChildProcess(int, char**, XREChildData const*) [toolkit/xre/nsEmbedFunctions.cpp:0]
[task 2023-01-19T10:56:33.370Z] 10:56:33     INFO - GECKO(1561) | #24: content_process_main(mozilla::Bootstrap*, int, char**) [ipc/contentproc/plugin-container.cpp:58]
[task 2023-01-19T10:56:33.371Z] 10:56:33     INFO - GECKO(1561) | #25: main [browser/app/nsBrowserApp.cpp:359]
[task 2023-01-19T10:56:33.377Z] 10:56:33     INFO - GECKO(1561) | #26: __libc_start_main [/lib/x86_64-linux-gnu/libc.so.6 + 0x21b97]
[task 2023-01-19T10:56:33.381Z] 10:56:33     INFO - GECKO(1561) | #27: ??? [/builds/worker/workspace/build/application/firefox/firefox-bin + 0x47099]
[task 2023-01-19T10:56:33.385Z] 10:56:33     INFO - GECKO(1561) | #28: ??? (???:???)
[task 2023-01-19T10:56:33.386Z] 10:56:33     INFO - GECKO(1561) | [Child 10387, Main Thread] WARNING: NS_ENSURE_TRUE(InitStaticMembers()) failed: file /builds/worker/workspace/obj-build/dist/include/mozilla/Preferences.h:129
[task 2023-01-19T10:56:33.386Z] 10:56:33     INFO - GECKO(1561) | [Child 10413, Main Thread] WARNING: NS_ENSURE_TRUE(Preferences::InitStaticMembers()) failed: file /builds/worker/checkouts/gecko/modules/libpref/Preferences.cpp:4663
[task 2023-01-19T10:56:33.386Z] 10:56:33     INFO - GECKO(1561) | [Child 10387, Main Thread] WARNING: NS_ENSURE_TRUE(Preferences::InitStaticMembers()) failed: file /builds/worker/checkouts/gecko/modules/libpref/Preferences.cpp:4663
[task 2023-01-19T10:56:33.387Z] 10:56:33     INFO - GECKO(1561) | [Child 1672: Main Thread]: I/DocShellAndDOMWindowLeak ++DOCSHELL 7f1027e31000 == 7 [pid = 1672] [id = 874]
<...>
INFO - zombiecheck | Checking for orphan process with PID: 10234
[task 2023-01-19T11:08:48.424Z] 11:08:48     INFO - mozcrash Copy/paste: /builds/worker/fetches/minidump-stackwalk/minidump-stackwalk --symbols-url=https://symbols.mozilla.org/ --human /tmp/tmp8d_qbabu.mozrunner/minidumps/3efa092b-0be4-5361-db29-4b3028019b3a.dmp /builds/worker/workspace/build/symbols
[task 2023-01-19T11:08:53.181Z] 11:08:53     INFO - mozcrash Saved minidump as /builds/worker/workspace/build/blobber_upload_dir/3efa092b-0be4-5361-db29-4b3028019b3a.dmp
[task 2023-01-19T11:08:53.181Z] 11:08:53     INFO - mozcrash Saved app info as /builds/worker/workspace/build/blobber_upload_dir/3efa092b-0be4-5361-db29-4b3028019b3a.extra
[task 2023-01-19T11:08:53.214Z] 11:08:53     INFO - PROCESS-CRASH | Main app process exited normally | application crashed [@ mozilla::dom::JSValidatorChild::RecvOnDataAvailable(mozilla::ipc::Shmem&&)]
[task 2023-01-19T11:08:53.214Z] 11:08:53     INFO - Mozilla crash reason: MOZ_ASSERT(mResolver)
[task 2023-01-19T11:08:53.214Z] 11:08:53     INFO - Crash dump filename: /tmp/tmp8d_qbabu.mozrunner/minidumps/3efa092b-0be4-5361-db29-4b3028019b3a.dmp
[task 2023-01-19T11:08:53.215Z] 11:08:53     INFO - Operating system: Linux
[task 2023-01-19T11:08:53.215Z] 11:08:53     INFO -                   4.4.0-1014-aws #14taskcluster1-Ubuntu SMP Tue Apr 3 10:27:00 UTC 2018
[task 2023-01-19T11:08:53.215Z] 11:08:53     INFO - CPU: amd64
[task 2023-01-19T11:08:53.216Z] 11:08:53     INFO -      family 6 model 85 stepping 7
[task 2023-01-19T11:08:53.216Z] 11:08:53     INFO -      2 CPUs
[task 2023-01-19T11:08:53.217Z] 11:08:53     INFO - Linux Ubuntu 18.04 - bionic (Ubuntu 18.04.6 LTS)
[task 2023-01-19T11:08:53.217Z] 11:08:53     INFO - 
[task 2023-01-19T11:08:53.218Z] 11:08:53     INFO - Crash reason:  SIGSEGV / SEGV_MAPERR
[task 2023-01-19T11:08:53.218Z] 11:08:53     INFO - Crash address: 0x0
[task 2023-01-19T11:08:53.218Z] 11:08:53     INFO - Crashing instruction: `mov dword [0x0], 0x14`
[task 2023-01-19T11:08:53.219Z] 11:08:53     INFO - Memory accessed by instruction:
[task 2023-01-19T11:08:53.219Z] 11:08:53     INFO -   0. Address: 0x0000000000000000
[task 2023-01-19T11:08:53.219Z] 11:08:53     INFO -      Size: 4
[task 2023-01-19T11:08:53.219Z] 11:08:53     INFO - Process uptime: not available
[task 2023-01-19T11:08:53.219Z] 11:08:53     INFO - 
[task 2023-01-19T11:08:53.219Z] 11:08:53     INFO - Thread 0 Utility Process (crashed)
[task 2023-01-19T11:08:53.220Z] 11:08:53     INFO -  0  libxul.so!mozilla::dom::JSValidatorChild::RecvOnDataAvailable(mozilla::ipc::Shmem&&) [JSValidatorChild.cpp:f7065b6ab2d70ede75b8cdd28db548d5b843186e : 20 + 0x0]
[task 2023-01-19T11:08:53.220Z] 11:08:53     INFO -      rax = 0x00007f9a5477b57a    rdx = 0x0000000000000000
[task 2023-01-19T11:08:53.220Z] 11:08:53     INFO -      rcx = 0x0000561f3f144c88    rbx = 0x00007f9a5220b290
[task 2023-01-19T11:08:53.221Z] 11:08:53     INFO -      rsi = 0x00007f9a68edd8b0    rdi = 0x00007f9a68edc680
[task 2023-01-19T11:08:53.221Z] 11:08:53     INFO -      rbp = 0x00007ffc8ede9920    rsp = 0x00007ffc8ede98d0
[task 2023-01-19T11:08:53.222Z] 11:08:53     INFO -       r8 = 0x00007f9a68edd8b0     r9 = 0x00007f9a69dd0780
[task 2023-01-19T11:08:53.222Z] 11:08:53     INFO -      r10 = 0x0000000000000000    r11 = 0x0000000000000000
[task 2023-01-19T11:08:53.223Z] 11:08:53     INFO -      r12 = 0xaaaaaaaaaaaaaaaa    r13 = 0x0000000000000000
[task 2023-01-19T11:08:53.223Z] 11:08:53     INFO -      r14 = 0x00007f9a6867f400    r15 = 0x00007ffc8ede9938
[task 2023-01-19T11:08:53.224Z] 11:08:53     INFO -      rip = 0x00007f9a5a615056
[task 2023-01-19T11:08:53.224Z] 11:08:53     INFO -     Found by: given as instruction pointer in context
[task 2023-01-19T11:08:53.224Z] 11:08:53     INFO -  1  libxul.so!mozilla::dom::PJSValidatorChild::OnMessageReceived(IPC::Message const&) [PJSValidatorChild.cpp: : 171 + 0x7]
[task 2023-01-19T11:08:53.224Z] 11:08:53     INFO -      rbx = 0x00007f9a5220b290    rbp = 0x00007ffc8ede99c0
[task 2023-01-19T11:08:53.225Z] 11:08:53     INFO -      rsp = 0x00007ffc8ede9930    r12 = 0xaaaaaaaaaaaaaaaa
[task 2023-01-19T11:08:53.226Z] 11:08:53     INFO -      r13 = 0x0000000000000000    r14 = 0x00007f9a6867f400
[task 2023-01-19T11:08:53.227Z] 11:08:53     INFO -      r15 = 0x00007ffc8ede9938    rip = 0x00007f9a5a70262b
[task 2023-01-19T11:08:53.227Z] 11:08:53     INFO -     Found by: call frame info
INFO -  2  libxul.so!mozilla::dom::PJSOracleChild::OnMessageReceived(IPC::Message const&) [PJSOracleChild.cpp: : 150 + 0x8]
[task 2023-01-19T11:08:53.227Z] 11:08:53     INFO -      rbx = 0x00007f9a6868fa88    rbp = 0x00007ffc8ede9a40
[task 2023-01-19T11:08:53.227Z] 11:08:53     INFO -      rsp = 0x00007ffc8ede99d0    r12 = 0x0000000000000001
[task 2023-01-19T11:08:53.227Z] 11:08:53     INFO -      r13 = 0x0000000000000000    r14 = 0x00007ffc8ede99e0
[task 2023-01-19T11:08:53.227Z] 11:08:53     INFO -      r15 = 0x00007f9a5220b280    rip = 0x00007f9a5a70168b
[task 2023-01-19T11:08:53.227Z] 11:08:53     INFO -     Found by: call frame info
[task 2023-01-19T11:08:53.228Z] 11:08:53     INFO -  3  libxul.so!mozilla::ipc::MessageChannel::DispatchAsyncMessage(mozilla::ipc::ActorLifecycleProxy*, IPC::Message const&) [MessageChannel.cpp:f7065b6ab2d70ede75b8cdd28db548d5b843186e : 1800 + 0x8]
[task 2023-01-19T11:08:53.228Z] 11:08:53     INFO -      rbx = 0x00007f9a6868fa88    rbp = 0x00007ffc8ede9a80
[task 2023-01-19T11:08:53.228Z] 11:08:53     INFO -      rsp = 0x00007ffc8ede9a50    r12 = 0x0000000000000001
[task 2023-01-19T11:08:53.228Z] 11:08:53     INFO -      r13 = 0x0000000000000000    r14 = 0x00007f9a5220b280
[task 2023-01-19T11:08:53.228Z] 11:08:53     INFO -      r15 = 0x00007f9a522bb1f0    rip = 0x00007f9a57f773f6
[task 2023-01-19T11:08:53.228Z] 11:08:53     INFO -     Found by: call frame info
[task 2023-01-19T11:08:53.228Z] 11:08:53     INFO -  4  libxul.so!mozilla::ipc::MessageChannel::DispatchMessage(mozilla::ipc::ActorLifecycleProxy*, mozilla::UniquePtr<IPC::Message, mozilla::DefaultDelete<IPC::Message> >) [MessageChannel.cpp:f7065b6ab2d70ede75b8cdd28db548d5b843186e : 1725 + 0x11]
[task 2023-01-19T11:08:53.228Z] 11:08:53     INFO -      rbx = 0x0000000000000000    rbp = 0x00007ffc8ede9b50
[task 2023-01-19T11:08:53.228Z] 11:08:53     INFO -      rsp = 0x00007ffc8ede9a90    r12 = 0x00007f9a6864a240
[task 2023-01-19T11:08:53.228Z] 11:08:53     INFO -      r13 = 0x0000000000000000    r14 = 0x00007ffc8ede9b68
[task 2023-01-19T11:08:53.228Z] 11:08:53     INFO -      r15 = 0x00007f9a6868fa88    rip = 0x00007f9a57f76432
[task 2023-01-19T11:08:53.228Z] 11:08:53     INFO -     Found by: call frame info
[task 2023-01-19T11:08:53.228Z] 11:08:53     INFO -  5  libxul.so!mozilla::ipc::MessageChannel::RunMessage(mozilla::ipc::ActorLifecycleProxy*, mozilla::ipc::MessageChannel::MessageTask&) [MessageChannel.cpp:f7065b6ab2d70ede75b8cdd28db548d5b843186e : 1525 + 0xd]
[task 2023-01-19T11:08:53.228Z] 11:08:53     INFO -      rbx = 0x00007ffc8ede9b68    rbp = 0x00007ffc8ede9ba0
[task 2023-01-19T11:08:53.228Z] 11:08:53     INFO -      rsp = 0x00007ffc8ede9b60    r12 = 0x00007f9a52240870
[task 2023-01-19T11:08:53.228Z] 11:08:53     INFO -      r13 = 0x0000000000000000    r14 = 0x00007f9a522bb1f0
[task 2023-01-19T11:08:53.228Z] 11:08:53     INFO -      r15 = 0x00007f9a6868fa88    rip = 0x00007f9a57f767b1
[task 2023-01-19T11:08:53.229Z] 11:08:53     INFO -     Found by: call frame info
[task 2023-01-19T11:08:53.229Z] 11:08:53     INFO -  6  libxul.so!mozilla::ipc::MessageChannel::MessageTask::Run() [MessageChannel.cpp:f7065b6ab2d70ede75b8cdd28db548d5b843186e : 1623 + 0xa]
[task 2023-01-19T11:08:53.229Z] 11:08:53     INFO -      rbx = 0x00007f9a52240800    rbp = 0x00007ffc8ede9be0
[task 2023-01-19T11:08:53.229Z] 11:08:53     INFO -      rsp = 0x00007ffc8ede9bb0    r12 = 0x00007f9a52240c80
[task 2023-01-19T11:08:53.229Z] 11:08:53     INFO -      r13 = 0x00007f9a5ee9c6e1    r14 = 0x00007f9a6864a240
[task 2023-01-19T11:08:53.229Z] 11:08:53     INFO -      r15 = 0x00007ffc8ede9bb8    rip = 0x00007f9a57f76db0
[task 2023-01-19T11:08:53.229Z] 11:08:53     INFO -     Found by: call frame info
<...>

The triggered assert seems to have to do with ORB, do you see something obvious, :sefeng ?

Flags: needinfo?(sefeng)

I don't immediate see an reason about why this assertion can fail.

Given the test (browser_ext_tabs_move_window.js) closes some windows
near the end, I wonder if it's possible for RecvOnDataAvailable to
be run after ActorDestroy.

Assignee: nobody → sefeng
Status: NEW → ASSIGNED

I don't see something obvious, but I wrote a patch which can help us better diagnose this.

Flags: needinfo?(sefeng)
Pushed by sefeng@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/95ed8f6ebc2d
Update an assertion in JSValidatorChild r=farre
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 111 Branch
Regressions: 1814307
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: