Bug 1811216 - Update an assertion in JSValidatorChild r=farre

I don't immediate see an reason about why this assertion can fail.

Given the test (browser_ext_tabs_move_window.js) closes some windows
near the end, I wonder if it's possible for RecvOnDataAvailable to
be run after ActorDestroy.

Differential Revision: https://phabricator.services.mozilla.com/D167270